# hl7v2validator-hl7pt

./: .gitignore  CHANGELOG.md  I18N_GUIDE.md  I18N_TESTING.md  README.md  RELEASE_NOTES_v2.0.0.md  create_translations.py  pyproject.toml  requirements.txt  run.py  run_local.bat  run_local.sh
.github/: dependabot.yml
.github/workflows/: docker.yml  security-audit.yml  test.yml
docker/: .dockerignore  .env.example  Dockerfile  README.md  build.bat  build.sh  docker-compose.yml  gunicorn.sh
hl7validator/: __init__.py  __main__.py  __version__.py  api.py  views.py
hl7validator/.github/workflows/: ci.yml  docker.yml  test.yml
hl7validator/docs/: v2.yml
hl7validator/static/: mystyle.css
hl7validator/templates/: hl7validatorhome.html
hl7validator/translations/pt/LC_MESSAGES/: messages.mo  messages.po
tests/: test_validator.py
