[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hl7validator-hl7pt"
version = "2.0.0"
description = "HL7 Version 2 Message Validator and Converter by HL7 Portugal"
readme = "README.md"
authors = [
    {name = "João Almeida", email = "geral@hl7.pt"},
]
maintainers = [
    {name = "HL7 Portugal", email = "geral@hl7.pt"},
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["hl7", "validator", "healthcare", "hl7v2", "message-validation", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.0.0",
    "Flask-Babel>=2.0.0",
    "hl7apy>=1.3.0",
    "requests>=2.25.0",
    "gunicorn>=20.0.0",
    "flasgger>=0.9.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "http://hl7.pt"
Repository = "https://github.com/hl7pt/hl7v2validator-hl7pt"
Documentation = "https://github.com/hl7pt/hl7v2validator-hl7pt/blob/main/README.md"
"Bug Tracker" = "https://github.com/hl7pt/hl7v2validator-hl7pt/issues"
"Live Instance" = "https://version2.hl7.pt"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
hl7validator = "hl7validator.__main__:main"

[tool.setuptools]
packages = ["hl7validator"]
include-package-data = true

[tool.setuptools.package-data]
hl7validator = [
    "static/**/*",
    "templates/**/*",
    "translations/**/*",
    "docs/**/*",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
